gcc/testsuite/rust/rustc/ui/rfcs/rfc-2497-if-let-chains/issue-93150_dg.rs
fn main() {
    match true {
        _ if let true = true && true => {}
// { dg-error ".E0658." "" { target *-*-* } .-1 }
// { dg-error ".E0658." "" { target *-*-* } .-2 }
        _ => {}
    }
}

